--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "electron-debug": "^1.0.0",
     "electron-tabs": "^0.9.0",
     "electron-titlebar-windows": "^3.0.0",
+    "eslint-plugin-react": "^7.7.0",
     "ffi": "^2.2.0",
-    "jade": "^1.11.0",
     "jquery": "^3.2.1",
     "jquery.js": "0.0.2-security",
     "mustache": "^2.3.0",
+    "pug": "^2.0.0-rc.4",
     "ref": "^1.3.5",
     "robotjs": "^0.4.7",
     "win32-api": "^1.11.0"
@@ -33,7 +34,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "devtron": "^1.1.0",
-    "electron": "^1.6.6",
+    "electron": "^1.8.2",
     "electron-packager": "^11.0.1",
     "electron-rebuild": "^1.7.3",
     "electron-winstaller": "^2.6.4",
