--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "scripts": {
     "test": "standard",
-    "start": "npm test && electron .",
-    "build": "electron-packager . --out=dist --asar --overwrite --platform win32",
-    "installer": "node scripts/build.js"
+    "start": "npm test && electron ./Main/main.js",
+    "dev": "cross-env NODE_ENV=dev npm run start",
+    "build": "electron-packager . --out=dist --asar --overwrite --platform win32"
   },
   "dependencies": {
     "clipboardy": "^1.2.2",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "cross-env": "^5.1.3",
     "devtron": "^1.1.0",
     "electron": "^1.8.2",
     "electron-packager": "^11.0.1",
@@ -46,11 +47,5 @@
     "eslint-plugin-standard": "^3.0.1",
     "standard": "^11.0.0",
     "xo": "^0.20.3"
-  },
-  "xo": {
-    "envs": [
-      "node",
-      "browser"
-    ]
   }
 }
