added a settings interface and some interactions

--- a/.editorconfig
+++ b/.editorconfig
@@ -23,6 +23,11 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
-[{package.json,*.yml,*.cjson}]
+[*.json]
 indent_style = space
 indent_size = 2
+
+
+[{package.json,*.yml,*.cjson}]
+indent_style = space
+indent_size =
