--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "name": "ysh-poe",
     "url": ""
   },
+  "main": "./Main/main.js",
   "scripts": {
     "test": "standard",
     "start": "npm test && electron ./Main/main.js",
@@ -25,7 +26,7 @@
     "ffi": "^2.2.0",
     "jquery": "^3.2.1",
     "jquery.js": "0.0.2-security",
-    "mustache": "^2.3.0",
+    "json-editor": "^0.7.28",
     "pug": "^2.0.0-rc.4",
     "ref": "^1.3.5",
     "robotjs": "^0.4.7",
@@ -40,7 +41,8 @@
     "electron-rebuild": "^1.7.3",
     "electron-winstaller": "^2.6.4",
     "eslint": "^4.18.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-jsx": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
