--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 dist
-scripts
+build-scripts
 
 # Dependency directories
 node_modules/
