--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "electron-tabs": "^0.9.0",
     "electron-titlebar-windows": "^3.0.0",
     "eslint-plugin-react": "^7.7.0",
-    "ffi": "^2.2.0",
     "jquery": "^3.2.1",
     "jquery.js": "0.0.2-security",
     "json-editor": "^0.7.28",
     "pug": "^2.0.0-rc.4",
-    "ref": "^1.3.5",
     "robotjs": "^0.4.7",
+    "show-poe-window": "https://github.com/ysh-poe/show-poe-window.git",
     "win32-api": "^1.11.0"
   },
   "devDependencies": {
