--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,22 @@
-{
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Debug Main Process",
-      "type": "node",
-      "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd",
-      "windows": {
-        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-      },
-      "args": [
-        "${workspaceRoot}/Main/main.js"
-      ]
-    }
-  ]
-}
+  {
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Electron: Main",
+        "protocol": "inspector",
+        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd",
+        "runtimeArgs": [
+          "--remote-debugging-port=9223",
+          "."
+        ],
+        "windows": {
+          "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+        },
+        "env": {
+          "NODE_ENV": "dev"
+        },
+      }
+    ]
+  }
